# Parquet-viewer

./: .gitignore  README.md  build_backend.sh  build_frontend.sh  deploy_backend.sh  deploy_frontend.sh
.emergent/: emergent.yml
backend/: requirements.txt  server.py
backend/parquetformatter_api/: Dockerfile  README.md  app.yaml  pyproject.toml  requirements.txt
backend/parquetformatter_api/app/: config.py  main.py
backend/parquetformatter_api/app/converters/: duck.py  polars_ndjson.py
backend/parquetformatter_api/app/routes/: convert.py  feedback.py  metrics.py  preview.py
backend/parquetformatter_api/app/services/: logging_config.py  persistence.py  supabase_client.py
backend/parquetformatter_api/app/utils/: streams.py  uploads.py
backend/parquetformatter_api/tests/: conftest.py  test_convert_errors.py  test_convert_routes.py  test_feedback_route.py  test_metrics_route.py  test_persistence.py  test_preview_route.py
backend/parquetformatter_api/tests/fixtures/: sample.ndjson
frontend/: index.html  package.json  tailwind.config.cjs  vite.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.jsx  index.css
frontend/src/components/: FeedbackWidget.jsx  FileConverter.jsx  Layout.jsx  PreviewModal.jsx
frontend/src/contexts/: ThemeContext.jsx
frontend/src/hooks/: usePageMeta.js
frontend/src/lib/: analytics.js
frontend/src/pages/: CsvToNdjson.jsx  CsvToParquet.jsx  Home.jsx  NdjsonToCsv.jsx  ParquetToCsv.jsx
