[tool.poetry]
name = "parquetformatter_api"
version = "0.1.0"
description = "API for ParquetFormatter.com"
authors = ["AI Assistant <ai@assistant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
duckdb = "^1.0.0"
polars = "^0.20.18"
pyarrow = "^16.0.0"
python-multipart = "^0.0.9"
zipstream-ng = "^1.3.5"
supabase = "^2.4.0"
google-cloud-logging = "^3.10.0"
gunicorn = "^21.2.0"
httpx = ">=0.25,<0.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pandas = "^2.2.3"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
